--- a/Disaggregation Algorithm.ipynb
+++ b/Disaggregation Algorithm.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -88,18 +96,17 @@
      "output_type": "stream",
      "text": [
       "Loading data for meter ElecMeterID(instance=2, building=1, dataset='REDD')     \n",
-      "Done loading data all meters for this chunk.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-89-52bdf684e897>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;31m#print(\"{} -- {}\".format(x_train.shape,y_train.shape))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;31m#print(x_train.base)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmeter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappliances\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;31m#for split in min_samples_split:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+      "Done loading data all meters for this chunk.\n",
+      "Training model for submeter 'ElecMeter(instance=5, building=1, dataset='REDD', appliances=[Appliance(type='fridge', instance=1)])'\n",
+      "<class 'nilmtk.elecmeter.ElecMeter'>\n",
+      "Training model for submeter 'ElecMeter(instance=11, building=1, dataset='REDD', appliances=[Appliance(type='microwave', instance=1)])'\n",
+      "<class 'nilmtk.elecmeter.ElecMeter'>\n",
+      "Training model for submeter 'ElecMeter(instance=8, building=1, dataset='REDD', appliances=[Appliance(type='sockets', instance=2)])'\n",
+      "<class 'nilmtk.elecmeter.ElecMeter'>\n",
+      "Training model for submeter 'ElecMeter(instance=9, building=1, dataset='REDD', appliances=[Appliance(type='light', instance=1)])'\n",
+      "<class 'nilmtk.elecmeter.ElecMeter'>\n",
+      "Training model for submeter 'ElecMeter(instance=6, building=1, dataset='REDD', appliances=[Appliance(type='dish washer', instance=1)])'\n",
+      "<class 'nilmtk.elecmeter.ElecMeter'>\n"
      ]
     }
    ],
@@ -119,7 +126,7 @@
     "\n",
     "for i, meter in enumerate(metergroup.submeters().meters):\n",
     "    print(\"Training model for submeter '{}'\".format(meter))\n",
-    "    \n",
+    "    print(type(meter))\n",
     "    #power_series = meter.power_series(sample_period=60, resample=True) #**load_kwargs\n",
     "    #chunk = next(power_series)\n",
     "    #list_clfs = []\n",
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -150,48 +157,185 @@
       "Done loading data all meters for this chunk.\n",
       "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
       "Done loading data all meters for this chunk.\n",
-      "DatetimeIndex(['2011-04-18 09:22:09-04:00', '2011-04-18 09:22:10-04:00',\n",
-      "               '2011-04-18 09:22:11-04:00', '2011-04-18 09:22:12-04:00',\n",
-      "               '2011-04-18 09:22:13-04:00', '2011-04-18 09:22:14-04:00',\n",
-      "               '2011-04-18 09:22:15-04:00', '2011-04-18 09:22:16-04:00',\n",
-      "               '2011-04-18 09:22:17-04:00', '2011-04-18 09:22:18-04:00', \n",
-      "               ...\n",
-      "               '2011-04-27 19:08:05-04:00', '2011-04-27 19:08:06-04:00',\n",
-      "               '2011-04-27 19:08:07-04:00', '2011-04-27 19:08:08-04:00',\n",
-      "               '2011-04-27 19:08:09-04:00', '2011-04-27 19:08:10-04:00',\n",
-      "               '2011-04-27 19:08:11-04:00', '2011-04-27 19:08:12-04:00',\n",
-      "               '2011-04-27 19:08:13-04:00', '2011-04-27 19:08:14-04:00'],\n",
-      "              dtype='datetime64[ns]', length=812766, freq=None, tz='US/Eastern')\n",
-      "DatetimeIndex(['2011-04-18 09:22:12-04:00', '2011-04-18 09:22:15-04:00',\n",
-      "               '2011-04-18 09:22:18-04:00', '2011-04-18 09:22:21-04:00',\n",
-      "               '2011-04-18 09:22:24-04:00', '2011-04-18 09:22:27-04:00',\n",
-      "               '2011-04-18 09:22:30-04:00', '2011-04-18 09:22:33-04:00',\n",
-      "               '2011-04-18 09:22:36-04:00', '2011-04-18 09:22:39-04:00', \n",
-      "               ...\n",
-      "               '2011-04-27 19:07:45-04:00', '2011-04-27 19:07:48-04:00',\n",
-      "               '2011-04-27 19:07:51-04:00', '2011-04-27 19:07:54-04:00',\n",
-      "               '2011-04-27 19:07:57-04:00', '2011-04-27 19:08:00-04:00',\n",
-      "               '2011-04-27 19:08:03-04:00', '2011-04-27 19:08:06-04:00',\n",
-      "               '2011-04-27 19:08:09-04:00', '2011-04-27 19:08:12-04:00'],\n",
-      "              dtype='datetime64[ns]', length=270921, freq=None, tz='US/Eastern')\n"
+      "(52236, 2)\n",
+      "(52235, 16)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "(26316, 18)\n"
      ]
     }
    ],
    "source": [
     "#print(train_elec.mains().dataframe_of_meters().shape) #meters #available_ac_types('power') #instance() #nested_metergroups #.appliances\n",
+    "train = DataSet('/nilmtk/data/REDD/redd.h5') \n",
+    "\n",
+    "train_elec = train.buildings[building_number].elec\n",
+    "\n",
     "metergroup = train.buildings[building_number].elec\n",
     "#print(type(train_elec.mains().dataframe_of_meters()))\n",
     "#print(type(metergroup.submeters().dataframe_of_meters()))\n",
     "#print(metergroup.submeters().dataframe_of_meters().shape)\n",
     "\n",
-    "main = train_elec.mains().dataframe_of_meters()\n",
-    "meters = train.buildings[building_number].elec.submeters().dataframe_of_meters()\n",
-    "print(main.index)\n",
-    "print(meters.index)\n",
+    "main = train_elec.mains().dataframe_of_meters(sample_period=60, resample=True)\n",
+    "meters = train.buildings[building_number].elec.submeters().dataframe_of_meters(sample_period=60, resample=True)\n",
+    "print(main.shape)\n",
+    "print(meters.shape)\n",
+    "print(type(main))\n",
+    "#print(main.index)\n",
+    "#print(meters.index)\n",
     "#joinMainMeters = meters.merge(main)\n",
+    "import pandas as pd\n",
+    "joinMainMeters = pd.concat([main, meters], axis=1, join='inner')\n",
+    "print(joinMainMeters.dropna().shape)\n",
+    "#print(joinMainMeters.dropna().head)\n",
     "\n",
     "#print(\"mains {} -- meters {} -- merged {}\".format(main.shape, meters.shape, joinMainMeters.shape))\n",
     "#choose data from mains and meters, that have data in both dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mains_1', 'mains_2']\n",
+      "['mains_1', 'mains_2', '5_Fridge']\n",
+      "['mains_1', 'mains_2', '6_Dish-washer']\n",
+      "['mains_1', 'mains_2', '7_Sockets']\n",
+      "['mains_1', 'mains_2', '8_Sockets']\n",
+      "['mains_1', 'mains_2', '9_Light']\n",
+      "['mains_1', 'mains_2', '11_Microwave']\n",
+      "['mains_1', 'mains_2', '12_Unknown']\n",
+      "['mains_1', 'mains_2', '13_Electric-space-heater']\n",
+      "['mains_1', 'mains_2', '14_Electric-stove']\n",
+      "['mains_1', 'mains_2', '15_Sockets']\n",
+      "['mains_1', 'mains_2', '16_Sockets']\n",
+      "['mains_1', 'mains_2', '17_Light']\n",
+      "['mains_1', 'mains_2', '18_Light']\n",
+      "['mains_1', 'mains_2', '19_Unknown']\n",
+      "Loading data for meter ElecMeterID(instance=4, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "['mains_1', 'mains_2', '3_4_Electric-oven']\n",
+      "Loading data for meter ElecMeterID(instance=20, building=1, dataset='REDD')     \n",
+      "Done loading data all meters for this chunk.\n",
+      "['mains_1', 'mains_2', '10_20_Washer-dryer']\n",
+      "House 15 data contain 10 days from 2 to 6.\n",
+      "['2011-04-18', '2011-04-19', '2011-04-20', '2011-04-21', '2011-04-22', '2011-04-23', '2011-04-24', '2011-04-25', '2011-04-26', '2011-04-27', '2011-04-28', '2011-04-30', '2011-05-01', '2011-05-02', '2011-05-03', '2011-05-06', '2011-05-07', '2011-05-11', '2011-05-12', '2011-05-13', '2011-05-22', '2011-05-23', '2011-05-24']\n",
+      "('df_train.shape: ', (13805, 3))\n",
+      "('df_val.shape: ', (6883, 3))\n",
+      "('df_test.shape: ', (5578, 3))\n",
+      "((13805, 2), (13805, 1), (6883, 2), (6883, 1), (5578, 2), (5578, 1))\n",
+      "('Trainning time: ', 18.744226932525635)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "train = DataSet('/nilmtk/data/REDD/redd.h5') \n",
+    "\n",
+    "train_elec = train.buildings[building_number].elec\n",
+    "\n",
+    "metergroup = train.buildings[building_number].elec\n",
+    "\n",
+    "main = train_elec.mains().dataframe_of_meters(sample_period=60, resample=True).dropna()\n",
+    "\n",
+    "colMainName = []\n",
+    "for i in range(1,main.shape[1]+1):\n",
+    "    colMainName.append('mains_{}'.format(i))\n",
+    "print(colMainName)\n",
+    "for i, meter in enumerate(metergroup.submeters().meters):\n",
+    "    if isinstance(meter.instance(), tuple):\n",
+    "        instance = '_'.join(str(e) for e in meter.instance())\n",
+    "    else:\n",
+    "        instance = meter.instance()\n",
+    "    applianceType = meter.label(pretty=True)\n",
+    "    colMeterName = \"{}_{}\".format( instance, applianceType.replace(' ','-'))\n",
+    "    df = meter.power_series_all_data(sample_period=60, resample=True).dropna() #dataframe_of_meters(sample_period=60, resample=True).dropna()\n",
+    " \n",
+    "    joinMainMeters = pd.concat([main, df], axis=1, join='inner')\n",
+    "    colsName = colMainName + [colMeterName]\n",
+    "    print(colsName)\n",
+    "    joinMainMeters.columns = colsName\n",
+    " \n",
+    "    \n",
+    "#print(joinMainMeters.head)\n",
+    "\n",
+    "dates = [str(time)[:10] for time in joinMainMeters.index.values]\n",
+    "dates = sorted(list(set(dates)))\n",
+    "print('House {0} data contain {1} days from {2} to {3}.'.format(i,len(dates[i]),dates[i][0], dates[i][-1]))\n",
+    "print(dates)\n",
+    "\n",
+    "# Separate house 1 data into train, validation and test data\n",
+    "df1_train = joinMainMeters.ix[:dates[10]]\n",
+    "df1_val = joinMainMeters.ix[dates[11]:dates[16]]\n",
+    "df1_test = joinMainMeters.ix[dates[17]:]\n",
+    "print('df_train.shape: ', df1_train.shape)\n",
+    "print('df_val.shape: ', df1_val.shape)\n",
+    "print('df_test.shape: ', df1_test.shape)\n",
+    "\n",
+    "# Using decision tree regression, here we use validation data to turn the min_samples_split parameter\n",
+    "def mse_loss(y_predict, y):\n",
+    "    return np.mean(np.square(y_predict - y)) \n",
+    "def mae_loss(y_predict, y):\n",
+    "    return np.mean(np.abs(y_predict - y)) \n",
+    "\n",
+    "min_samples_split=np.arange(2, 400, 10)\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "def tree_reg(X_train, y_train, X_val, y_val, min_samples_split):\n",
+    "    import time\n",
+    "    clfs = []\n",
+    "    losses = []\n",
+    "    start = time.time()\n",
+    "    for split in min_samples_split:\n",
+    "        clf = DecisionTreeRegressor(min_samples_split = split)\n",
+    "        clf.fit(X_train, y_train)\n",
+    "        y_predict_val = clf.predict(X_val)\n",
+    "        clfs.append(clf)\n",
+    "        losses.append( mse_loss(y_predict_val, y_val) )\n",
+    "    print('Trainning time: ', time.time() - start)\n",
+    "    return clfs, losses\n",
+    "\n",
+    "# Using mains_1, mains_2 to predict refrigerator\n",
+    "X_train1 = df1_train.iloc[:,:main.shape[1]].values\n",
+    "y_train1 = df1_train.iloc[:,main.shape[1]:].values\n",
+    "X_val1 = df1_val.iloc[:,:main.shape[1]].values\n",
+    "y_val1 = df1_val.iloc[:,main.shape[1]:].values\n",
+    "X_test1 = df1_test.iloc[:,:main.shape[1]].values\n",
+    "y_test1 = df1_test.iloc[:,main.shape[1]:].values\n",
+    "print(X_train1.shape, y_train1.shape, X_val1.shape, y_val1.shape, X_test1.shape, y_test1.shape)\n",
+    "\n",
+    "tree_clfs_1, tree_losses_1 = tree_reg(X_train1, y_train1, X_val1, y_val1, min_samples_split)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.88758087158e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "a = time.time()\n",
+    "\n",
+    "print(time.time()-a)"
    ]
   }
  ],
