--- a/TreeRegressorAlgorithm.ipynb
+++ b/TreeRegressorAlgorithm.ipynb
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -1402,10 +1402,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+      "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+      "           min_samples_split=382, min_weight_fraction_leaf=0.0,\n",
+      "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+      "           verbose=0, warm_start=False)\n",
       "5000\n",
-      "Was sended 5000 events of the appliance Microwave[11]\n",
+      "Was sended 5000 events of the appliance Fridge[5]\n",
       "5578\n",
-      "Was sended 5578 events of the appliance Microwave[11]\n",
+      "Was sended 5578 events of the appliance Fridge[5]\n",
       "Was sended 5578 events of the building 1\n"
      ]
     }
@@ -1424,9 +1429,12 @@
     "\n",
     "folder = '/nilmtk/data/EA006-NILM-project/Training_output/'\n",
     "building = 1\n",
-    "file = '11_Microwave_out.pkl' #'9_Light_out.pkl' #'8_Sockets_out.pkl' #'5_Fridge_out.pkl'\n",
-    "instance = 11 #9 #8 #6 #5\n",
-    "applianceType = 'Microwave' #'Light' #'Sockets' #'Dish washer' #'Fridge'\n",
+    "#'11_Microwave_out.pkl' #'9_Light_out.pkl' #'8_Sockets_out.pkl' #6_Dish-washer_out.pkl #'5_Fridge_out.pkl' \n",
+    "file = '5_Fridge_out.pkl'\n",
+    "#11 #9 #8 #6 #5\n",
+    "instance = 5\n",
+    "#'Microwave' #'Light' #'Sockets' #'Dish washer' #'Fridge'\n",
+    "applianceType = 'Fridge'\n",
     "\n",
     "type = 'REDD_TR'\n",
     "host = 'https://live.intelie.com/services/plugin-restinput/testeThiago/batch/{}?'.format(type)\n",
@@ -1437,6 +1445,11 @@
     "\n",
     "y_test_predict = obj['model'].predict(X_test1)\n",
     "#print(type(y_test_predict), type(X_test1), type(df1_test))\n",
+    "\n",
+    "print(obj['model'])\n",
+    "#print(X_test1.shape)\n",
+    "#print(y_test_predict.shape)\n",
+    "#print(y_test_predict[y_test_predict>100].shape)\n",
     "\n",
     "sendEvents = 0\n",
     "count = 0\n",
@@ -1454,15 +1467,16 @@
     "             '__overwrite':[\"applianceType\",\"instance\",\"timestamp\"],\n",
     "             '__skiprealtime':True\n",
     "            }\n",
-    "\n",
+    "    n += 1\n",
     "    sendEvents += 1\n",
     "    count += 1\n",
     "    eventBatch.append(event)\n",
     "    if (count%5000 == 0 or count == df_size):\n",
     "        print(count)\n",
     "        u = requests.post(host, headers=headers, data=json.dumps(eventBatch))\n",
-    "        eventBatch = []\n",
     "        #print(json.dumps(eventBatch))\n",
+    "        eventBatch = []\n",
+    "        \n",
     "        sleep(1)\n",
     "        print(\"Was sended {} events of the appliance {}[{}]\".format(count, applianceType, instance))\n",
     "print(\"Was sended {} events of the building {}\".format(sendEvents, building))"
@@ -1470,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -1479,18 +1493,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<type 'numpy.ndarray'>, <type 'numpy.ndarray'>, <class 'pandas.core.frame.DataFrame'>)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'instancemethod' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-62-c624363e7b90>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_predict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf1_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf1_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m1000000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test_predict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'instancemethod' object is not iterable"
+      "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+      "           max_features='auto', max_leaf_nodes=None, min_samples_leaf=1,\n",
+      "           min_samples_split=382, min_weight_fraction_leaf=0.0,\n",
+      "           n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
+      "           verbose=0, warm_start=False)\n",
+      "[[  96.32293701   38.42411804]\n",
+      " [  96.18516541   38.42116547]\n",
+      " [  97.12516785   38.40416718]\n",
+      " ..., \n",
+      " [ 239.25166321   38.11999893]\n",
+      " [ 239.25166321   38.11999893]\n",
+      " [ 236.97592163   38.52296448]]\n",
+      "[   9.27477472    9.27477472    9.27477472 ...,  135.26517835  135.26517835\n",
+      "  188.65299741]\n"
      ]
     }
    ],
@@ -1501,14 +1517,10 @@
     "with open(filePath) as f:  # Python 3: open(..., 'rb')\n",
     "    obj = pickle.load(f)\n",
     "\n",
-    "y_test_predict = obj['model'].predict(X_test1)\n",
-    "print(type(y_test_predict), type(X_test1), type(df1_test))\n",
-    "n = 0\n",
-    "for i in df1_test.iterrows():\n",
-    "    print int(i[0].value/1000000), y_test_predict[n]\n",
-    "    if n>10:\n",
-    "        break\n",
-    "    n += 1"
+    "#y_test_predict = obj['model'].predict(X_test1)\n",
+    "print(obj['model'])\n",
+    "print(X_test1)\n",
+    "print(obj['model'].predict(X_test1))"
    ]
   }
  ],
